--- a/ReadMe
+++ b/ReadMe
@@ -1,2 +1,5 @@
+# Python
 [?] This is Only for learning purpose
 [?] Use it at your own risk
+***
+# Any man who reads too much and uses his own brain too little falls into lazy habits of thinking
